--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -6,48 +6,48 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingTop="30dp"
-    android:paddingHorizontal="10dp">
+    android:paddingHorizontal="15dp"
+    android:background="@color/light_white">
     <ImageView
         android:layout_gravity="center_horizontal"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/ic_pass"/>
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/new_password"/>
     <TextView
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
         android:text="Thay đổi mật khẩu"
-        android:textSize="26sp"
-        android:textStyle="bold"/>
+        android:textSize="24sp"
+        android:fontFamily="@font/bevan"/>
     <TextView
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Nhập vào mật khẩu mới:"
-        android:textSize="10sp"
-        android:layout_marginBottom="5dp"
+        android:textSize="14sp"
+        android:fontFamily="serif"
+        android:layout_marginBottom="20dp"
         android:gravity="center"/>
+
     <TextView
-        android:textSize="16dp"
+        android:textStyle="bold"
+        android:textSize="18sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="serif"
         android:text="Mật khẩu mới:"
         android:textColor="@color/black"
         android:layout_marginBottom="5dp"/>
-
-
+    
     <com.google.android.material.textfield.TextInputLayout
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:startIconDrawable="@drawable/ic_pass"
         app:startIconTint="@color/black"
         app:endIconTint="@color/black"
         app:endIconMode="password_toggle"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="40dp"
         android:layout_marginBottom="15dp">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -55,15 +55,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawablePadding="10dp"
-            android:hint="Mời nhập mật khẩu mới"
+            android:hint="Mật khẩu mới"
+            android:background="@color/white"
+            android:fontFamily="serif"
             android:inputType="textPassword"
             android:lines="1"/>
     </com.google.android.material.textfield.TextInputLayout>
     <TextView
-        android:textSize="16sp"
+        android:textStyle="bold"
+        android:textSize="18sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Nhập lại mật khẩu: "
+        android:fontFamily="serif"
         android:textColor="@color/black"/>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -73,9 +77,6 @@
         app:startIconTint="@color/black"
         app:endIconTint="@color/black"
         app:endIconMode="password_toggle"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="40dp"
         android:layout_marginBottom="15dp">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -85,13 +86,16 @@
             android:drawablePadding="10dp"
             android:inputType="textPassword"
             android:lines="1"
-            android:hint="Mời nhập lại mật khẩu "/>
+            android:backgroundTint="@color/white"
+            android:fontFamily="serif"
+            android:hint="Nhập lại mật khẩu"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center">
+        android:gravity="bottom"
+        android:orientation="vertical">
 
         <Button
             android:id="@+id/btn_Confirm_activity_change_password"
@@ -99,12 +103,12 @@
             android:layout_height="wrap_content"
             android:background="@drawable/shadow_button_layer_list"
             android:text="Xác nhận"
+            android:textSize="14sp"
+            android:fontFamily="@font/bevan"
+            android:layout_marginBottom="30dp"
+            android:layout_gravity="center_horizontal"
             app:backgroundTint="@color/black"
-            android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textColor="@color/white"/>
 
     </LinearLayout>
 
