--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -5,55 +5,69 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".ForgetPasswordActivity">
+    tools:context=".ForgetPasswordActivity"
+    android:padding="20dp">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Quên mật khẩu"
-        android:textStyle="bold"
-        android:textSize="25dp"
-        android:textColor="@color/black"
-        android:layout_marginTop="100dp"
-        android:layout_marginLeft="15dp"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Nhập vào các thông tin sau:"
-        android:textSize="20dp"
-        android:textColor="#838080"
-        android:layout_marginLeft="15dp"/>
+        android:layout_height="wrap_content">
 
+        <ImageView
+            android:id="@+id/btn_back_forgetPassword_Activity"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/new_back" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="76dp"
+            android:fontFamily="@font/bevan"
+            android:text="Quên mật khẩu"
+            android:textColor="@color/black"
+            android:textSize="24sp" />
+    </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Nhập số điện thoại"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:textColor="@color/black"
+        android:fontFamily="serif"
         android:textStyle="bold"
-        android:textSize="20dp"
-        android:layout_marginLeft="15dp"/>
+        android:textSize="18sp"/>
+
     <EditText
         android:id="@+id/edt_Phonenumber1"
-        android:layout_width="387dp"
+        android:layout_width="match_parent"
         android:layout_gravity="center"
         android:textColor="@color/black"
-        android:hint="Nhập số dt"
-        android:textSize="18dp"
+        android:hint="Số điện thoại của bạn"
+        android:lines="1"
+        android:layout_marginTop="5dp"
+        android:textSize="14sp"
+        android:fontFamily="serif"
         android:layout_height="wrap_content"
         android:backgroundTint="#838080"
         android:drawableEnd="@drawable/ic_baseline_check_circle_24"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="bottom">
+
     <CheckBox
         android:id="@+id/chk_dieukhoan"
-        android:layout_width="375dp"
+        android:layout_width="match_parent"
         android:layout_height="72dp"
-        android:layout_marginLeft="15dp"
         android:layout_marginTop="120dp"
-        android:buttonTint="#808383"
-        android:text="Tạo một tài khoản mới đồng nghĩa với việc bạn đã đồng ý với những chính sách của chúng tôi"
-        android:textColor="#838080"
-        android:textSize="18dp"
+        android:buttonTint="@color/black"
+        android:fontFamily="serif"
+        android:text="Tôi đồng ý mọi chính sách và điều khoản sử dụng"
+        android:textColor="@color/black"
+        android:textSize="14sp"
         android:checked="true"/>
 
     <Button
@@ -61,10 +75,12 @@
         android:layout_width="335dp"
         android:layout_height="wrap_content"
         android:background="@drawable/round_btn"
-        android:layout_gravity="center"
-        android:backgroundTint="@color/black"
-        android:layout_marginTop="35dp"
-        android:textStyle="bold"
+        app:backgroundTint="@color/black"
+        android:fontFamily="@font/bevan"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center_horizontal"
+        android:textSize="14sp"
         android:text="Tiếp theo"/>
+    </LinearLayout>
 
 </LinearLayout>
