--- a/app/src/main/res/layout/activity_product_search.xml
+++ b/app/src/main/res/layout/activity_product_search.xml
@@ -8,8 +8,8 @@
     tools:context=".ProductSearchActivity"
     android:padding="15dp"
     android:orientation="vertical">
-        <LinearLayout
 
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
@@ -19,51 +19,56 @@
                     android:id="@+id/btn_BackToHomePage_activity_product_search"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/ic_round_arrow_circle_left_24" />
+                    android:src="@drawable/new_back" />
 
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edt_Search_ProductSearch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="7"
                     android:height="50dp"
-                    android:background="@drawable/custom_search_mainactivity"
-                    android:drawableLeft="@drawable/ic_baseline_search_24"
+                    android:textSize="14sp"
+                    android:layout_marginStart="5dp"
                     android:hint="Tìm kiếm/ Tra cứu sản phẩm"
-                    android:minHeight="48dp"
-                    android:paddingLeft="10dp"
-                    app:backgroundTint="@null"
-                    tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck">
+                    android:lines="1">
+                </com.google.android.material.textfield.TextInputEditText>
 
-                </EditText>
                 <ImageView
                     android:layout_weight="3"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@drawable/filter"
+                    android:src="@drawable/new_filter"
                     android:layout_gravity="center_vertical"/>
-
         </LinearLayout>
+
         <TextView
-            android:layout_width="match_parent"
+            android:textColor="@color/black"
+            android:fontFamily="@font/bevan"
+            android:drawableRight="@drawable/search_icon"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Lịch sử tìm kiếm"
-            android:textSize="24sp"
-            android:textStyle="bold"/>
+            android:textSize="18sp" />
+
         <ListView
             android:id="@+id/lv_HistorySearch_fragment_product_search"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_marginBottom="10dp" />
+
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Đề xuất sản phẩm"
-            android:textSize="24sp"
-            android:textStyle="bold"/>
+            android:text="Sản phẩm đề xuất"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:fontFamily="@font/bevan"
+            android:drawableRight="@drawable/suggest_icon"/>
+
         <GridView
             android:id="@+id/gv_ProductSuggest_fragment_product_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:numColumns="2"/>
+
 </LinearLayout>
